<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.lindley.tomapedidos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_bienvenido" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/gaseosa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#3F56BA"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btiniciodia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_iniciodia" />

        <Button
            android:id="@+id/main_btpreventa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_preventa" />

        <Button
            android:id="@+id/main_btestadistica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_estadistica" />

        <Button
            android:id="@+id/main_btcierredia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cierredia" />

        <Button
            android:id="@+id/main_btcerrarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cerrarsesion" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
